Initial commit - prototype working with json test api

--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
     "react-scripts": "1.0.17",
-    "broadway-player":"^0.1.1",
-    "sylvester":"^0.0.21",
-    "material-ui": "next"
+    "broadway-player": "^0.1.1",
+    "sylvester": "^0.0.21",
+    "material-ui": "next",
+    "material-ui-icons": "1.0.0-beta.17",
+    "react-router-dom":"^4.2.2",
+    "react-flip-move":"^2.9.17"
   },
   "scripts": {
     "start": "react-scripts start",
