--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "sylvester": "^0.0.21",
     "material-ui": "next",
     "material-ui-icons": "1.0.0-beta.17",
-    "react-router-dom":"^4.2.2"
+    "react-router-dom":"^4.2.2",
+    "mqtt-react":"^0.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
