Change app name (for chrome web-app)

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Heimdall Web-App",
+  "name": "Heimdall Web-App",
   "icons": [
     {
       "src": "favicon.ico",
